[metadata]
name = savanna-guestagent
version=0.1
summary = Savanna guest agent is an RPC agent for Savanna project.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://savanna.readthedocs.org
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    savanna

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = savanna/locale
domain = savanna-guestagent

[update_catalog]
domain = savanna-guestagent
output_dir = savanna/locale
input_file = savanna/locale/savanna-guestagent.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = savanna/locale/savanna-guestagent.pot

[entry_points]
console_scripts =
    savanna-agent = savanna.guestagent.agent:main
