[metadata]
name = sahara-guestagent
version=0.1
summary = Sahara guest agent is an RPC agent for Sahara project.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/sahara
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    sahara

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = sahara/locale
domain = sahara-guestagent

[update_catalog]
domain = sahara-guestagent
output_dir = sahara/locale
input_file = sahara/locale/sahara-guestagent.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sahara/locale/sahara-guestagent.pot

[entry_points]
console_scripts =
    sahara-agent = sahara.guestagent.agent:main
